Html & CSS Update

--- a/Code Files/css_file.css
+++ b/Code Files/css_file.css
@@ -1,5 +1,17 @@
 body {
     background-color: #fff;
-  }
+}
 
-h1 {text-align: center;}
+.display {
+    background-color: pink;
+    padding: 10px;
+}
+
+.add_box {
+    background-color: plum;
+    padding: 10px;
+}
+
+h1 {
+    text-align: center;
+}
