--- a/Code Files/css_file.css
+++ b/Code Files/css_file.css
@@ -30,10 +30,8 @@ h1 {
     text-align: center;
 }
 
-.weekly {
+.weekly{
     text-align: center;
-}
-
-.table{
-    width: 100%
+    width: 100%;
+    border: 1px;
 }
