--- a/Code Files/css_file.css
+++ b/Code Files/css_file.css
@@ -3,6 +3,7 @@ body {
 }
 
 .display {
+    margin-top: min(40px, 10%);
     height: 60%;
     width: 90%;
     top: 48%;
@@ -15,6 +16,7 @@ body {
 }
 
 .add_box {
+    margin-top: min(40px, 10%);
     height: 20%;
     width: 40%;
     top: 80%;
@@ -30,8 +32,21 @@ h1 {
     text-align: center;
 }
 
-.weekly{
+table {
     text-align: center;
     width: 100%;
-    border: 1px;
+    border-collapse: collapse;
 }
+
+tr { 
+    border: none; 
+}
+
+th, td {
+    border-right: solid 1px #000;
+    padding: 8px 
+}
+
+th:last-child, td:last-child {
+    border-right: none; /* Remove border from the last column */
+  }
