--- a/Code Files/css_file.css
+++ b/Code Files/css_file.css
@@ -13,6 +13,7 @@ body {
     border-radius: 10px 50px 10px 50px;
     position: absolute;
     background-color: pink;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .add_box {
@@ -26,10 +27,13 @@ body {
     border-radius: 30px 5px 30px 5px;
     position: absolute;
     background-color: plum;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 h1 {
+    background-color: #fff;
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 table {
