Add new class box for delete

--- a/code_files/style.css
+++ b/code_files/style.css
@@ -21,12 +21,26 @@ body {
     height: 20%;
     width: 40%;
     top: 80%;
-    left: 10%;
+    left: 13%;
     transform: translate(-13%, -20%);
     padding: 10px;
     border-radius: 30px 5px 30px 5px;
     position: absolute;
     background-color: plum;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.del_box {
+    margin-top: min(40px, 10%);
+    height: 20%;
+    width: 40%;
+    top: 80%;
+    left: 58%;
+    transform: translate(-13%, -20%);
+    padding: 10px;
+    border-radius: 5px 30px 5px 30px;
+    position: absolute;
+    background-color: lightcoral;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
